objects/Flow_EMail_Defaults__c.object
<CustomObject>
    <fields>
        <fullName>Default_Email__c</fullName>
        <description>Default Email address/addresses to use.</description>
        <inlineHelpText>Make sure you format as expected if using multiple addresses</inlineHelpText>
        <label>Default Email</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_User_Name__c</fullName>
        <description>The Name to use if the flow or query that requires a name -to be populated to replacement for Full Name of user</description>
        <inlineHelpText>The Name to use if the flow or query that requires a name -to be populated to replacement for Full Name of user</inlineHelpText>
        <label>Default User Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Unique Name to use for lookup in flow or query</description>
        <inlineHelpText>Unique Name to use for lookup in flow or query</inlineHelpText>
        <label>Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Used for Flows which may need to email a lookup field user.  This would be the default if the users does not exist</description>
    <label>Flow EMail Defaults</label>
</CustomObject>